Small bugs squashed

--- a/style.css
+++ b/style.css
@@ -64,10 +64,13 @@ main {
 
 .main-img {
   grid-column: 1 / span 8;
+  grid-row: 1 / span 1;
 }
 
-img {
-  max-width: 100%;
+.main-img > img {
+  height: 80%;
+  width: 100%;
+  overflow: hidden;
 }
 
 .new-section {
@@ -77,7 +80,7 @@ img {
 
 .new-content-container {
   background-color: #00001a;
-  height: 100%;
+  height: 90%;
   width: 100%;
 }
 
